<resources>
    <string name="app_name">You Park Like An Ahole</string>

    <string name="single_job_title">Job Details</string>

    <string name="description_label">Description:</string>
    <string name="default_job_description">Enter description of this nice parking job</string>

    <string name="action_settings">Settings</string>

    <string name="details_label">Details:</string>
    <string name="timestamp">Submit Parking Job</string>
    <string name="ahole_identified">Asshole Identified?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_host">FragmentHostActivity</string>
    <string name="hello_world">Hello World</string>
</resources>
